--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="content">
         <div class="row">
             <div class="col">
-                <h1>A Name</h1>
-                <h3>This is a website.</h3>
+                <h1>Ray O. Sunshine</h1>
+                <h3>Thoughts and Things That Make Me Happy</h3>
             </div>
             <div class="col">
                 <p>This is a column</p>
