--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h3>Thoughts and Things That Make Me Happy</h3>
             </div>
             <div class="col">
-                <p>This is a column</p>
+              <img src="Ray O. Sunshine.webp" />
             </div>
         </div>
         
