--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h3>Thoughts and Things That Make Me Happy</h3>
             </div>
             <div class="col">
-              <img src="Ray O. Sunshine.webp" />
+              <img src="Ray O. Sunshine.webp" class="profile-img" />
             </div>
         </div>
         
