--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             
             <div class="row">
                 <div class="col">
-                    <iframe width="100%" height="500" src=<iframe src="https://giphy.com/embed/4How4vb1GsLTi" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/flowers-wind-4How4vb1GsLTi">via GIPHY</a></p>
+                    <iframe width="100%" height="500" src=<iframe src=<div style="width:100%;height:0;padding-bottom:56%;position:relative;"><iframe src="https://giphy.com/embed/4How4vb1GsLTi" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/flowers-wind-4How4vb1GsLTi">via GIPHY</a></p>
             </div>
             <div class="col"></div>
         </div>
