--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
             <div class="col">
                 <div class="row">
                     <div class="col">
-                        <img src="https://media.giphy.com/media/4How4vb1GsLTi/giphy.gif />
+                        <img src=https://media.giphy.com/media/4How4vb1GsLTi/giphy.gif />
                         </div>
                     <div class="col">
-                        <img src="https://media.giphy.com/media/ClgCsg2SxRFtK/giphy.gif />
+                        <img src=https://media.giphy.com/media/ClgCsg2SxRFtK/giphy.gif />
                     </div>
                 </div>
             </div>
