--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <p>Family, Faith, Friends, and Dogs</p>
             </div>
             <div class="col">
-                <h2>Thoughts to live by</h2>
+                <h2>Thought to live by</h2>
                 <p>The words you speak become the house you live in.</p>
             </div>
             <div class="col">
