--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <h2>My Mantra</h2>
                 <p>Yesterday is heavy. Put it down.</p>
             </div>
+        </div>
             
           
             <div class="col">
